# KitBigData

./: .buildinfo  .coverage  .gitignore  README.md  app.py  genindex.html  index.html  installation.html  main.py  modules.html  notebook.ipynb  objects.inv  projet_kbd.analysis_text.html  projet_kbd.comment_analyzer.html  projet_kbd.config.html  projet_kbd.data_analyzer.html  projet_kbd.data_downloader.html  projet_kbd.data_loader.html  projet_kbd.data_plotter.html  projet_kbd.html  projet_kbd.logger_config.html  projet_kbd.main.html  projet_kbd.streamlit_app.html  projet_kbd.utils.html  py-modindex.html  pyproject.toml  run_project.sh  search.html  searchindex.js  usage.html
.devcontainer/: devcontainer.json
.doctrees/: environment.pickle  index.doctree  installation.doctree  modules.doctree  projet_kbd.analysis_text.doctree  projet_kbd.comment_analyzer.doctree  projet_kbd.config.doctree  projet_kbd.data_analyzer.doctree  projet_kbd.data_downloader.doctree  projet_kbd.data_loader.doctree  projet_kbd.data_plotter.doctree  projet_kbd.doctree  projet_kbd.logger_config.doctree  projet_kbd.main.doctree  projet_kbd.streamlit_app.doctree  projet_kbd.utils.doctree  usage.doctree
.doctrees/source/: projet_kbd.data_downloader.doctree  projet_kbd.data_loader.doctree  projet_kbd.doctree
.github/workflows/: ci.yml  sphinx-docs.yml
_modules/: index.html
_modules/projet_kbd/: comment_analyzer.html  data_analyzer.html  data_downloader.html  data_loader.html  data_plotter.html  main.html  streamlit_app.html  utils.html
_sources/: modules.rst.txt  projet_kbd.analysis_text.rst.txt  projet_kbd.config.rst.txt  projet_kbd.data_analyzer.rst.txt  projet_kbd.data_loader.rst.txt  projet_kbd.data_plotter.rst.txt  projet_kbd.logger_config.rst.txt  projet_kbd.rst.txt  projet_kbd.streamlit_app.rst.txt  projet_kbd.utils.rst.txt  usage.rst.txt
_sources/source/: projet_kbd.rst.txt
docs/: conf.py  requirements.txt
docs/source/: conf.py  index.rst  installation.rst  projet_kbd.comment_analyzer.rst  projet_kbd.data_downloader.rst  projet_kbd.main.rst  projet_kbd.rst  usage.rst
projet_kbd/: analysis_text.py  comment_analyzer.py  config.py  data_analyzer.py  data_downloader.py  data_loader.py  data_plotter.py  logger_config.py  main.py  streamlit_app.py  test_app.py  top_tags.json  usage.rst  utils.py
source/: installation.html  projet_kbd.comment_analyzer.html  projet_kbd.data_analyzer.html  projet_kbd.data_downloader.html  projet_kbd.data_loader.html  projet_kbd.data_plotter.html  projet_kbd.html  projet_kbd.logger_config.html  projet_kbd.main.html  projet_kbd.streamlit_app.html  projet_kbd.utils.html  usage.html
streamlit_utils/: streamlit_app.py
tests/: test_comment_analyzer.py  test_data_analyzer.py  test_main.py  test_utils.py
utils_data/: data_analyzer.py  data_loader.py  data_plotter.py
