[tool.poetry]
name = "projet-kbd"
version = "0.1.0"
description = "Projet Kit Big Data - MS IS_BGD Télécom Paris - 2024/2025"
authors = [
    "Ghalia Chaoui <ghalia.chaoui@gmail.com>",
    "Nour Nounah <nounah.nour511@gmail.com>",
    "Hariri Safe <safae045@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.11"
pandas = "*"
numpy = "*"
matplotlib = "*"
seaborn = "*"
jupyter = "*"
streamlit = "*"
sqlalchemy = "^2.0.36"
streamlit-option-menu = "^0.4.0"
plotly = "^5.24.1"
wordcloud = "^1.9.4"
scikit-learn = "^1.5.2"
textblob = "^0.18.0.post0"

[tool.poetry.dev-dependencies]
black = "*"  # Auto-formatting, compatible with PEP8
flake8 = "*"  # Linting for PEP8 compliance
mypy = "*"  # Static type checking
sphinx = "*"  # Documentation generation
ipykernel = "*"  # Jupyter kernel support

[tool.flake8]
max-line-length = 88  # Align with Black's default line length
extend-ignore = [
    "E203",  # Whitespace before ':' (Black compatibility for slicing)
    "W503",  # Line break before binary operator (Black compatibility)
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
